@@ -4,6 +4,7 @@ dev:
   * also add event_id to stats object (will not be written to SAC and Q format, see #10)
   * add dpi and figsize option where applicable (see #13, #14)
   * fix bug in IterMultipleComponents (see #9)
+  * fix error when using custom deconvolution function with Stream.rf
 v0.7.0:
   * add official support for python 3.7 and 3.8
 v0.6.3:
